Bug fix: Unable to click soundboard controls due to overlapping elements when scrolling.

--- a/soundboard/css/songs-list.css
+++ b/soundboard/css/songs-list.css
@@ -1,6 +1,7 @@
 *{
   box-sizing: border-box;
   font-size: 16px;
+  border: 0px solid blue;
 }
 
 body{
@@ -61,6 +62,10 @@ fieldset {
   text-align: center;
   border: 1px solid #ccc; /* Add a light border to make it visible */
   padding: 1em;           /* Add some padding for better appearance */
+}
+
+section{
+  margin-bottom: 2em;
 }
 
 a:visited{
